# examples

./: README.md
examples/ai-native-api/: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/ai-native-api/api/: main.py
examples/fastapi/: Dockerfile  README.md  dosei.py  pyproject.toml
examples/fastapi-mongo/: .env  README.md  pyproject.toml
examples/fastapi-mongo/todo/: main.py
images/python:3.10/: Dockerfile
images/python:3.11/: Dockerfile
images/python:3.9/: Dockerfile
