[tool.poetry]
name = "ai-native-api"
version = "0.1.0"
description = "Hello World AI-Native API example with Chroma and Langchain"
authors = ["Dosei Team <hi@dosei.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
langchain = "^0.0.302"
python-multipart = "^0.0.6"
unstructured = "^0.10.16"
chromadb = "^0.4.13"
openai = "^0.28.1"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
