[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "Hello World FastAPI example"
authors = ["Dosei Team <hi@dosei.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
dosei-sdk = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
